# autodoc-v2

./: .env.example  .flake8  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  dev-run.bat  dev-run.command  docker-compose.yml  new_requirements.txt  old_requirements.txt  pyproject.toml
.claude/: settings.local.json
.cursor/rules/: project-rule.mdc  specify-rules.mdc
.github/: copilot-instructions.md
.serena/: project.yml
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh  create-new-feature.sh  update-agent-context.sh
.specify/templates/: plan-template.md
archive/: deep_structure_agent.py  test_deep_agent_structure.py  test_deep_structure_agent.py  test_wiki_agent_deep_agent.py
doc-resources/: high-leve-architecture.md  wiki-generation-prompts.md
docs/: api.md
docs/plans/: 2025-01-02-wiki-react-agent-refactor.md  2025-01-02-wiki-workflow-refactor.md  2025-12-25-document-agent-implementation.md  2025-12-25-document-agent-simplification-design.md  2025-12-29-wiki-agent-data-flow-design.md  2025-12-29-wiki-agent-data-flow-implementation.md  2025-12-30-deep-agent-wiki-structure-design.md  2025-12-30-deep-agent-wiki-structure-implementation.md  2025-12-31-context-efficient-exploration-implementation.md  2025-12-31-hybrid-page-generation-implementation.md  2025-12-31-page-generation-approaches-design.md  2025-12-31-parallel-page-generation-implementation.md  2026-01-01-deep-page-agent-design.md  2026-01-01-deep-page-agent-implementation.md  wiki-agent-shared-memory.md
docs/proposals/: 2025-01-02-wiki-agent-orchestration-proposal.md  2025-01-07-wiki-workflow-improvements.md  2025-01-08-fanout-fanin-page-generation.md  2025-01-10-page-agent-structured-output-refactor.md  subagent-refactoring-proposal.md
scripts/: README.md  clean_cache.py  dev-run.ps1  dev-run.sh  drop_indexes.py  drop_text_indexes.py  fix_index_conflict.py  fix_index_conflict_v2.py  test_startup.py
specs/001-build-the-autodoc/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-the-autodoc/contracts/: chat_api.yaml  documentation_api.yaml  repository_api.yaml
src/: AGENTS.md  __init__.py  dependencies.py
src/agents/: AGENTS.md  __init__.py  deep_page_agent.py  deep_structure_agent.py  document_agent.py  page_tools.py  wiki_agent.py  wiki_react_agents.py  wiki_workflow.py  workflow.py
src/api/: AGENTS.md  __init__.py  main.py
src/api/middleware/: auth.py  (+3 more)
src/models/: AGENTS.md  __init__.py  base.py  chat.py  code_document.py  config.py  repository.py  user.py  wiki.py  wiki_memory.py
src/prompts/: AGENTS.md  __init__.py  wiki_prompts.yaml
src/repository/: AGENTS.md  __init__.py  answer_repository.py  base.py  chat_session_repository.py  code_document_repository.py  database.py  question_repository.py  repository_repository.py  user_repository.py  wiki_memory_repository.py  wiki_structure_repository.py
src/services/: AGENTS.md  __init__.py  auth_service.py  chat_service.py  document_service.py  mcp_filesystem_client.py  repository_service.py  wiki_memory_service.py  wiki_service.py
src/tools/: AGENTS.md  __init__.py  context_tool.py  embedding_tool.py  llm_tool.py  repository_tool.py
src/utils/: AGENTS.md  config_loader.py  database.py  local_storage.py  logging_config.py  mongodb_adapter.py  retry_utils.py  s3_storage.py  storage_adapters.py  webhook_validator.py
tests/: __init__.py  conftest.py  test_langchain_imports.py
tests/bdd/: __init__.py  conftest.py  test_chat.py  test_repositories.py  test_wiki.py
tests/contract/: __init__.py  test_chat_api.py  test_documentation_api.py  test_repository_api.py  test_webhook_api.py
tests/fixtures/: __init__.py
tests/integration/: test_chat_workflow.py  test_document_analysis.py  test_repository_registration.py  test_semantic_search.py  test_webhook_processing.py  test_wiki_data_flow.py  test_wiki_generation.py  test_wiki_workflow_integration.py
tests/performance/: __init__.py  test_api_performance.py  test_chat_performance.py  test_webhook_load.py
tests/security/: __init__.py  test_webhook_security.py
tests/unit/: test_deep_page_agent.py  test_deep_structure_agent.py  test_document_agent.py  test_health.py  test_models.py  test_services.py  test_tools.py  test_wiki_agent_deep_agent.py  test_wiki_react_agents.py  test_wiki_workflow.py
(+22 files in other folders)
